@@ -824,157 +824,6 @@ return|return
 name|reader
 return|;
 block|}
-comment|/** Expert: Returns one greater than the largest possible document number.    *     * @see org.apache.lucene.index.IndexReader#maxDoc()    */
-DECL|method|maxDoc
-specifier|public
-name|int
-name|maxDoc
-parameter_list|()
-block|{
-return|return
-name|reader
-operator|.
-name|maxDoc
-argument_list|()
-return|;
-block|}
-comment|/** Returns total docFreq for this term. */
-DECL|method|docFreq
-specifier|public
-name|int
-name|docFreq
-parameter_list|(
-specifier|final
-name|Term
-name|term
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-if|if
-condition|(
-name|executor
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-name|reader
-operator|.
-name|docFreq
-argument_list|(
-name|term
-argument_list|)
-return|;
-block|}
-else|else
-block|{
-specifier|final
-name|ExecutionHelper
-argument_list|<
-name|Integer
-argument_list|>
-name|runner
-init|=
-operator|new
-name|ExecutionHelper
-argument_list|<
-name|Integer
-argument_list|>
-argument_list|(
-name|executor
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|leafContexts
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-specifier|final
-name|IndexReader
-name|leaf
-init|=
-name|leafContexts
-index|[
-name|i
-index|]
-operator|.
-name|reader
-decl_stmt|;
-name|runner
-operator|.
-name|submit
-argument_list|(
-operator|new
-name|Callable
-argument_list|<
-name|Integer
-argument_list|>
-argument_list|()
-block|{
-specifier|public
-name|Integer
-name|call
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-return|return
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
-name|leaf
-operator|.
-name|docFreq
-argument_list|(
-name|term
-argument_list|)
-argument_list|)
-return|;
-block|}
-block|}
-argument_list|)
-expr_stmt|;
-block|}
-name|int
-name|docFreq
-init|=
-literal|0
-decl_stmt|;
-for|for
-control|(
-name|Integer
-name|num
-range|:
-name|runner
-control|)
-block|{
-name|docFreq
-operator|+=
-name|num
-operator|.
-name|intValue
-argument_list|()
-expr_stmt|;
-block|}
-return|return
-name|docFreq
-return|;
-block|}
-block|}
 comment|/* Sugar for<code>.getIndexReader().document(docID)</code> */
 DECL|method|doc
 specifier|public
