@@ -214,7 +214,7 @@ name|float
 name|freq
 parameter_list|)
 function_decl|;
-comment|/**    * Computes a score factor for a simple term and returns an explanation    * for that score factor.    *     *<p>    * The default implementation uses:    *     *<pre>    * idf(docFreq, searcher.maxDoc());    *</pre>    *     * Note that {@link IndexSearcher#maxDoc()} is used instead of    * {@link org.apache.lucene.index.IndexReader#numDocs() IndexReader#numDocs()} because also     * {@link IndexSearcher#docFreq(Term)} is used, and when the latter     * is inaccurate, so is {@link IndexSearcher#maxDoc()}, and in the same direction.    * In addition, {@link IndexSearcher#maxDoc()} is more efficient to compute    *       * @param collectionStats collection-level statistics    * @param termStats term-level statistics for the term    * @return an Explain object that includes both an idf score factor               and an explanation for the term.    * @throws IOException    */
+comment|/**    * Computes a score factor for a simple term and returns an explanation    * for that score factor.    *     *<p>    * The default implementation uses:    *     *<pre>    * idf(docFreq, searcher.maxDoc());    *</pre>    *     * Note that {@link CollectionStatistics#maxDoc()} is used instead of    * {@link org.apache.lucene.index.IndexReader#numDocs() IndexReader#numDocs()} because also     * {@link TermStatistics#docFreq()} is used, and when the latter     * is inaccurate, so is {@link CollectionStatistics#maxDoc()}, and in the same direction.    * In addition, {@link CollectionStatistics#maxDoc()} is more efficient to compute    *       * @param collectionStats collection-level statistics    * @param termStats term-level statistics for the term    * @return an Explain object that includes both an idf score factor               and an explanation for the term.    * @throws IOException    */
 DECL|method|idfExplain
 specifier|public
 name|Explanation
