@@ -852,6 +852,9 @@ name|maxDocs
 init|=
 name|s
 operator|.
+name|getIndexReader
+argument_list|()
+operator|.
 name|maxDoc
 argument_list|()
 decl_stmt|;
@@ -1207,6 +1210,9 @@ name|maxDocs
 init|=
 name|s
 operator|.
+name|getIndexReader
+argument_list|()
+operator|.
 name|maxDoc
 argument_list|()
 decl_stmt|;
@@ -1485,6 +1491,9 @@ name|int
 name|maxDocs
 init|=
 name|s
+operator|.
+name|getIndexReader
+argument_list|()
 operator|.
 name|maxDoc
 argument_list|()
