@@ -845,16 +845,21 @@ argument_list|(
 name|doc
 argument_list|)
 expr_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
 name|IndexSearcher
 name|indexSearcher
 init|=
 operator|new
 name|IndexSearcher
 argument_list|(
-name|w
-operator|.
-name|getReader
-argument_list|()
+name|reader
 argument_list|)
 decl_stmt|;
 name|w
@@ -865,7 +870,7 @@ expr_stmt|;
 name|int
 name|maxDoc
 init|=
-name|indexSearcher
+name|reader
 operator|.
 name|maxDoc
 argument_list|()
