@@ -1341,6 +1341,41 @@ return|return
 name|core
 return|;
 block|}
+DECL|method|maxDoc
+specifier|public
+specifier|final
+name|int
+name|maxDoc
+parameter_list|()
+block|{
+return|return
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+return|;
+block|}
+DECL|method|docFreq
+specifier|public
+specifier|final
+name|int
+name|docFreq
+parameter_list|(
+name|Term
+name|term
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|reader
+operator|.
+name|docFreq
+argument_list|(
+name|term
+argument_list|)
+return|;
+block|}
 comment|/** Register sub-objects such as caches    */
 DECL|method|register
 specifier|public
